--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -8,7 +8,7 @@
     </section>
 
     <div class="techs" layout-align="center">
-      <md-button ng-href="flash-cards">Get started!</md-button>
+      <md-button ng-href="/study">Get started!</md-button>
     </div>
   </md-content>
 
