--- a/src/app/index.less
+++ b/src/app/index.less
@@ -6,6 +6,7 @@
 // endbower
 
 @import url(//fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
+@import 'components/flashcard/flashcard.less';
 
 @font-face {
   font-family: 'Material Icons';
